<resources>
    <string name="app_name">APZshop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="create_an_account">Create an Account.</string>
    <string name="slide1">slide!</string>
    <string name="welcome_our_beloved_customers_whats_your_interest">Welcome Our beloved Customers. whats your interest?</string>
    <string name="welcome_our_beloved_customers" />
    <string name="welcome_our_beloved_customer">Welcome our beloved Customer.</string>
    <string name="what_draws_your_interest">What draws your interest?</string>
    <string name="create_an_account0">Create an Account.</string>
    <string name="welcome_shoppers">Welcome Shoppers!</string>
    <string name="logintxt">Login</string>
    <string name="first_slide">Window shopping without hesitating to go trough the store.</string>
    <string name="second_slide">We have a very good deal just for you and a lots of voucher.</string>
    <string name="third_slide">Good products, Reliable sellers, and Users friendly application.</string>
    <string name="description">APZshop Mobile Application at your service.</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="imges">imges</string>
    <string name="imges2">imges2</string>
    <string name="proceed_shopping">Proceed Shopping</string>
    <string name="contextdescrpt">contextdescrpt</string>
    <string name="context">Context</string>
    <string name="email">E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>