<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity"
    android:background="@drawable/newdes">


    <EditText
        android:id="@+id/Email"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_marginTop="295dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/edit_txt_corner"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_marginTop="380dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/edit_txt_corner"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_below="@id/Username"
        android:layout_marginTop="15dp"
        android:autofillHints="Enter Password"
        android:background="@drawable/edit_txt_corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/Repassword"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_below="@id/Password"
        android:layout_marginTop="15dp"
        android:autofillHints="Re-enter Password"
        android:background="@drawable/edit_txt_corner"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/Signupbtn"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_below="@id/Repassword"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_txt_btncrnr"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/Loginbtn"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:layout_below="@id/Repassword"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_txt_btncrnr"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="401dp"
        android:layout_height="275dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/apzlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="250dp"
        android:text="@string/create_an_account0"
        android:textColor="#FFCC59"
        android:textSize="24sp"
        android:textStyle="bold"
        />

</RelativeLayout>