<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.LoginAct"
    android:background="@drawable/logindes">

    <EditText
        android:id="@+id/Username1"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_marginTop="320dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/edit_txt_corner"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/Password1"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_below="@id/Username1"
        android:layout_marginTop="10dp"
        android:autofillHints="Enter Password"
        android:background="@drawable/edit_txt_corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/Loginbtn1"
        android:layout_width="182dp"
        android:layout_height="67dp"
        android:layout_below="@id/Password1"
        android:layout_marginStart="112dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_txt_btncrnr"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/accntlogo"
        />

    <Button
        android:id="@+id/signuptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Loginbtn1"
        android:layout_marginStart="133dp"
        android:layout_marginTop="5dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/create_an_account" />

    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.Holo.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="130dp"
        android:text="@string/welcome_shoppers"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="275dp"
        android:shadowColor="#040303"
        android:text="@string/logintxt"
        android:textColor="#D59F26"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>